updated some names

--- a/checknotebook.ipynb
+++ b/checknotebook.ipynb
@@ -1247,7 +1247,7 @@
     "import data_tools\n",
     "\n",
     "\n",
-    "df=pd.read_csv(\"data/Amount of currencies one US$ can buy (higher is better).csv\")\n",
+    "df=pd.read_csv(\"data/population density (in citizens per km^2) (higher is better).csv\")\n",
     "# df[\"0\"]=df[\"0\"].apply(lambda x: data_tools.try_lstrip(x))\n",
     "\n",
     "# df[\"0\"]=df[\"0\"].apply(lambda x:  data_tools.try_rstrip(x))\n",
@@ -1255,7 +1255,7 @@
     "df[\"1\"]=df[\"1\"].apply(lambda x:  x.replace(\",\",\"\"))\n",
     "df[\"1\"]=df[\"1\"].apply(lambda x:  float(x))\n",
     "\n",
-    "data_tools.apply_bypopulation(df)\n",
+    "# data_tools.apply_bypopulation(df)\n",
     "\n",
     "\n",
     "# df[\"1\"]=df[\"1\"].apply(lambda x:  x.replace(\",\",\"\"))\n",
