--- a/checknotebook.ipynb
+++ b/checknotebook.ipynb
@@ -1238,7 +1238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1247,22 +1247,26 @@
     "import data_tools\n",
     "\n",
     "\n",
-    "df=pd.read_csv(\"data/population density (in citizens per km^2) (higher is better).csv\")\n",
-    "# df[\"0\"]=df[\"0\"].apply(lambda x: data_tools.try_lstrip(x))\n",
+    "df=pd.read_csv(\"rawdata/number_of_aircraft.csv\")\n",
+    "df[\"0\"]=df[\"0\"].apply(lambda x: data_tools.try_lstrip(x))\n",
     "\n",
-    "# df[\"0\"]=df[\"0\"].apply(lambda x:  data_tools.try_rstrip(x))\n",
+    "df[\"0\"]=df[\"0\"].apply(lambda x:  data_tools.try_rstrip(x))\n",
     "# df[\"2\"]=df[\"1\"].apply(lambda x:  data_tools.replace_credit_rating(x))\n",
-    "df[\"1\"]=df[\"1\"].apply(lambda x:  x.replace(\",\",\"\"))\n",
-    "df[\"1\"]=df[\"1\"].apply(lambda x:  float(x))\n",
     "\n",
-    "# data_tools.apply_bypopulation(df)\n",
+    "# df[\"1\"]=df[\"1\"].apply(lambda x:  str(x))\n",
+    "# df[\"1\"]=df[\"1\"].apply(lambda x:  x.replace(\",\",\"\"))\n",
+    "df[\"1\"]=df[\"1\"].apply(lambda x:  float(x))\n",
+    "df=df[df[\"1\"]!=0.0]\n",
     "\n",
     "\n",
     "# df[\"1\"]=df[\"1\"].apply(lambda x:  x.replace(\",\",\"\"))\n",
+    "# df[\"1\"]=df[\"1\"].apply(lambda x:  float(x))\n",
+    "\n",
     "# df[\"1\"]=df[\"1\"].apply(lambda x:  data_tools.find_year_in_string(x))\n",
     "# df[\"1\"]=df[\"1\"].apply(lambda x:  data_tools.try_int(x))\n",
     "\n",
     "# df[\"1\"]=df[\"1\"].apply(lambda x:  float(x))\n",
+    "data_tools.apply_bypopulation(df)\n",
     "\n",
     "# df\n",
     "# for country in df[\"0\"].tolist():\n",
