--- a/checknotebook.ipynb
+++ b/checknotebook.ipynb
@@ -1238,7 +1238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1247,7 +1247,7 @@
     "import data_tools\n",
     "\n",
     "\n",
-    "df=pd.read_csv(\"rawdata/number_of_aircraft.csv\")\n",
+    "df=pd.read_csv(\"rawdata/national_holiday_earlier_is_better.csv\")\n",
     "df[\"0\"]=df[\"0\"].apply(lambda x: data_tools.try_lstrip(x))\n",
     "\n",
     "df[\"0\"]=df[\"0\"].apply(lambda x:  data_tools.try_rstrip(x))\n",
@@ -1255,8 +1255,8 @@
     "\n",
     "# df[\"1\"]=df[\"1\"].apply(lambda x:  str(x))\n",
     "# df[\"1\"]=df[\"1\"].apply(lambda x:  x.replace(\",\",\"\"))\n",
-    "df[\"1\"]=df[\"1\"].apply(lambda x:  float(x))\n",
-    "df=df[df[\"1\"]!=0.0]\n",
+    "# df[\"1\"]=df[\"1\"].apply(lambda x:  float(x))\n",
+    "# df=df[df[\"1\"]!=0.0]\n",
     "\n",
     "\n",
     "# df[\"1\"]=df[\"1\"].apply(lambda x:  x.replace(\",\",\"\"))\n",
@@ -1266,7 +1266,7 @@
     "# df[\"1\"]=df[\"1\"].apply(lambda x:  data_tools.try_int(x))\n",
     "\n",
     "# df[\"1\"]=df[\"1\"].apply(lambda x:  float(x))\n",
-    "data_tools.apply_bypopulation(df)\n",
+    "# data_tools.apply_bypopulation(df)\n",
     "\n",
     "# df\n",
     "# for country in df[\"0\"].tolist():\n",
