--- a/checknotebook.ipynb
+++ b/checknotebook.ipynb
@@ -1513,6 +1513,157 @@
     "print(dataframe3)\n",
     "dataframe3.to_csv(\"test.csv\",index=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "         operator                          operatorQID  \\\n",
+      "0     Afghanistan  http://www.wikidata.org/entity/Q889   \n",
+      "1     Afghanistan  http://www.wikidata.org/entity/Q889   \n",
+      "2     Afghanistan  http://www.wikidata.org/entity/Q889   \n",
+      "3     Afghanistan  http://www.wikidata.org/entity/Q889   \n",
+      "4     Afghanistan  http://www.wikidata.org/entity/Q889   \n",
+      "...           ...                                  ...   \n",
+      "9847     Zimbabwe  http://www.wikidata.org/entity/Q954   \n",
+      "9848     Zimbabwe  http://www.wikidata.org/entity/Q954   \n",
+      "9849     Zimbabwe  http://www.wikidata.org/entity/Q954   \n",
+      "9850     Zimbabwe  http://www.wikidata.org/entity/Q954   \n",
+      "9851     Zimbabwe  http://www.wikidata.org/entity/Q954   \n",
+      "\n",
+      "                                jurisdictions  \\\n",
+      "0                  Australia|New Zealand|Fiji   \n",
+      "1     Austria|Slovenia|Bosnia and Herzegovina   \n",
+      "2                          Belgium|Luxembourg   \n",
+      "3                         Bulgaria|Montenegro   \n",
+      "4                                Canada|Chile   \n",
+      "...                                       ...   \n",
+      "9847                             South Africa   \n",
+      "9848            Norway|Finland|Sweden|Denmark   \n",
+      "9849                                   Turkey   \n",
+      "9850       Republic of Ireland|United Kingdom   \n",
+      "9851                 United States of America   \n",
+      "\n",
+      "                                       jurisdictionQIDs  \\\n",
+      "0     http://www.wikidata.org/entity/Q408|http://www...   \n",
+      "1     http://www.wikidata.org/entity/Q40|http://www....   \n",
+      "2     http://www.wikidata.org/entity/Q31|http://www....   \n",
+      "3     http://www.wikidata.org/entity/Q219|http://www...   \n",
+      "4     http://www.wikidata.org/entity/Q16|http://www....   \n",
+      "...                                                 ...   \n",
+      "9847                http://www.wikidata.org/entity/Q258   \n",
+      "9848  http://www.wikidata.org/entity/Q20|http://www....   \n",
+      "9849                 http://www.wikidata.org/entity/Q43   \n",
+      "9850  http://www.wikidata.org/entity/Q27|http://www....   \n",
+      "9851                 http://www.wikidata.org/entity/Q30   \n",
+      "\n",
+      "                       country                           countryQID  \\\n",
+      "0                    Australia  http://www.wikidata.org/entity/Q408   \n",
+      "1                      Austria   http://www.wikidata.org/entity/Q40   \n",
+      "2                      Belgium   http://www.wikidata.org/entity/Q31   \n",
+      "3                     Bulgaria  http://www.wikidata.org/entity/Q219   \n",
+      "4                       Canada   http://www.wikidata.org/entity/Q16   \n",
+      "...                        ...                                  ...   \n",
+      "9847              South Africa  http://www.wikidata.org/entity/Q258   \n",
+      "9848                    Sweden   http://www.wikidata.org/entity/Q34   \n",
+      "9849                    Turkey   http://www.wikidata.org/entity/Q43   \n",
+      "9850            United Kingdom  http://www.wikidata.org/entity/Q145   \n",
+      "9851  United States of America   http://www.wikidata.org/entity/Q30   \n",
+      "\n",
+      "                      city                                  cityQID  address  \\\n",
+      "0                 Canberra     http://www.wikidata.org/entity/Q3114      NaN   \n",
+      "1                   Vienna     http://www.wikidata.org/entity/Q1741      NaN   \n",
+      "2                    Uccle   http://www.wikidata.org/entity/Q203312      NaN   \n",
+      "3                    Sofia      http://www.wikidata.org/entity/Q472      NaN   \n",
+      "4                   Ottawa     http://www.wikidata.org/entity/Q1930      NaN   \n",
+      "...                    ...                                      ...      ...   \n",
+      "9847              Pretoria     http://www.wikidata.org/entity/Q3926      NaN   \n",
+      "9848  Lidingö Municipality  http://www.wikidata.org/entity/Q3120654      NaN   \n",
+      "9849                Ankara     http://www.wikidata.org/entity/Q3640      NaN   \n",
+      "9850   City of Westminster   http://www.wikidata.org/entity/Q179351      NaN   \n",
+      "9851      Washington, D.C.       http://www.wikidata.org/entity/Q61      NaN   \n",
+      "\n",
+      "      latitude  ...                                            picture  \\\n",
+      "0    -35.32355  ...  http://commons.wikimedia.org/wiki/Special:File...   \n",
+      "1     48.20180  ...                                                NaN   \n",
+      "2     50.79850  ...                                                NaN   \n",
+      "3     42.65010  ...                                                NaN   \n",
+      "4     45.41120  ...  http://commons.wikimedia.org/wiki/Special:File...   \n",
+      "...        ...  ...                                                ...   \n",
+      "9847 -25.74223  ...                                                NaN   \n",
+      "9848  59.36210  ...  http://commons.wikimedia.org/wiki/Special:File...   \n",
+      "9849  39.89732  ...                                                NaN   \n",
+      "9850  51.50960  ...  http://commons.wikimedia.org/wiki/Special:File...   \n",
+      "9851  38.91130  ...  http://commons.wikimedia.org/wiki/Special:File...   \n",
+      "\n",
+      "                     pictureAuthor pictureLicense  \\\n",
+      "0                          Kransky  Public domain   \n",
+      "1                              NaN            NaN   \n",
+      "2                              NaN            NaN   \n",
+      "3                              NaN            NaN   \n",
+      "4                      Matti Blume   CC BY-SA 4.0   \n",
+      "...                            ...            ...   \n",
+      "9847                           NaN            NaN   \n",
+      "9848  Irina Butiaha - Ірина Бутяга  Public domain   \n",
+      "9849                           NaN            NaN   \n",
+      "9850                    Astrotrain  Public domain   \n",
+      "9851          AgnosticPreachersKid   CC BY-SA 3.0   \n",
+      "\n",
+      "                                   pictureLicenseURL     type  \\\n",
+      "0                                                NaN  embassy   \n",
+      "1                                                NaN  embassy   \n",
+      "2                                                NaN  embassy   \n",
+      "3                                                NaN  embassy   \n",
+      "4     https://creativecommons.org/licenses/by-sa/4.0  embassy   \n",
+      "...                                              ...      ...   \n",
+      "9847                                             NaN  embassy   \n",
+      "9848                                             NaN  embassy   \n",
+      "9849                                             NaN  embassy   \n",
+      "9850                                             NaN  embassy   \n",
+      "9851  https://creativecommons.org/licenses/by-sa/3.0  embassy   \n",
+      "\n",
+      "                                      typeQID creation  \\\n",
+      "0     http://www.wikidata.org/entity/Q3917681      NaN   \n",
+      "1     http://www.wikidata.org/entity/Q3917681      NaN   \n",
+      "2     http://www.wikidata.org/entity/Q3917681      NaN   \n",
+      "3     http://www.wikidata.org/entity/Q3917681      NaN   \n",
+      "4     http://www.wikidata.org/entity/Q3917681      NaN   \n",
+      "...                                       ...      ...   \n",
+      "9847  http://www.wikidata.org/entity/Q3917681      NaN   \n",
+      "9848  http://www.wikidata.org/entity/Q3917681      NaN   \n",
+      "9849  http://www.wikidata.org/entity/Q3917681      NaN   \n",
+      "9850  http://www.wikidata.org/entity/Q3917681      NaN   \n",
+      "9851  http://www.wikidata.org/entity/Q3917681      NaN   \n",
+      "\n",
+      "                                            QID Unnamed: 25 ones  \n",
+      "0     http://www.wikidata.org/entity/Q106450319         NaN    1  \n",
+      "1     http://www.wikidata.org/entity/Q104602592         NaN    1  \n",
+      "2      http://www.wikidata.org/entity/Q68189173         NaN    1  \n",
+      "3     http://www.wikidata.org/entity/Q108886456         NaN    1  \n",
+      "4      http://www.wikidata.org/entity/Q13634268         NaN    1  \n",
+      "...                                         ...         ...  ...  \n",
+      "9847  http://www.wikidata.org/entity/Q106731055         NaN    1  \n",
+      "9848   http://www.wikidata.org/entity/Q18335158         NaN    1  \n",
+      "9849  http://www.wikidata.org/entity/Q111039564         NaN    1  \n",
+      "9850    http://www.wikidata.org/entity/Q5369920         NaN    1  \n",
+      "9851    http://www.wikidata.org/entity/Q5369921         NaN    1  \n",
+      "\n",
+      "[9852 rows x 27 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "df=pd.read_csv(\"database_of_embassies.csv\",sep=\";\")\n",
+    "onelist=[1]*len(df.index)\n",
+    "df[\"ones\"]=onelist\n",
+    "# print(df)"
+   ]
   }
  ],
  "metadata": {
