--- a/checknotebook.ipynb
+++ b/checknotebook.ipynb
@@ -1238,81 +1238,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "66°33′39\"S\n",
-      "23°26′21″S\n",
-      "00°00′00″\n",
-      "22°9′14″N\n",
-      "23°26′21″N\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Traceback (most recent call last):\n",
-      "  File \"c:\\Users\\juliu\\Google Drive\\Infoprojekte\\The_Geography_Game\\data_tools.py\", line 137, in use_coordinates\n",
-      "    return float(string)*k\n",
-      "ValueError: could not convert string to float: '66.3339\"'\n",
-      "Traceback (most recent call last):\n",
-      "  File \"c:\\Users\\juliu\\Google Drive\\Infoprojekte\\The_Geography_Game\\data_tools.py\", line 137, in use_coordinates\n",
-      "    return float(string)*k\n",
-      "ValueError: could not convert string to float: '23.2621″'\n",
-      "Traceback (most recent call last):\n",
-      "  File \"c:\\Users\\juliu\\Google Drive\\Infoprojekte\\The_Geography_Game\\data_tools.py\", line 137, in use_coordinates\n",
-      "    return float(string)*k\n",
-      "ValueError: could not convert string to float: '00.0000″'\n",
-      "Traceback (most recent call last):\n",
-      "  File \"c:\\Users\\juliu\\Google Drive\\Infoprojekte\\The_Geography_Game\\data_tools.py\", line 137, in use_coordinates\n",
-      "    return float(string)*k\n",
-      "ValueError: could not convert string to float: '22.914″'\n",
-      "Traceback (most recent call last):\n",
-      "  File \"c:\\Users\\juliu\\Google Drive\\Infoprojekte\\The_Geography_Game\\data_tools.py\", line 137, in use_coordinates\n",
-      "    return float(string)*k\n",
-      "ValueError: could not convert string to float: '23.2621″'\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "argument of type 'float' is not iterable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\juliu\\Google Drive\\Infoprojekte\\The_Geography_Game\\checknotebook.ipynb Cell 2\u001b[0m in \u001b[0;36m<cell line: 16>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/juliu/Google%20Drive/Infoprojekte/The_Geography_Game/checknotebook.ipynb#W1sZmlsZQ%3D%3D?line=13'>14</a>\u001b[0m df[\u001b[39m\"\u001b[39m\u001b[39m1\u001b[39m\u001b[39m\"\u001b[39m]\u001b[39m=\u001b[39mdf[\u001b[39m\"\u001b[39m\u001b[39m1\u001b[39m\u001b[39m\"\u001b[39m]\u001b[39m.\u001b[39mapply(\u001b[39mlambda\u001b[39;00m x:  data_tools\u001b[39m.\u001b[39mallesinklammernlöschen(x,\u001b[39m\"\u001b[39m\u001b[39m(\u001b[39m\u001b[39m\"\u001b[39m,\u001b[39m\"\u001b[39m\u001b[39m)\u001b[39m\u001b[39m\"\u001b[39m))\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/juliu/Google%20Drive/Infoprojekte/The_Geography_Game/checknotebook.ipynb#W1sZmlsZQ%3D%3D?line=14'>15</a>\u001b[0m df[\u001b[39m\"\u001b[39m\u001b[39m1\u001b[39m\u001b[39m\"\u001b[39m]\u001b[39m=\u001b[39mdf[\u001b[39m\"\u001b[39m\u001b[39m1\u001b[39m\u001b[39m\"\u001b[39m]\u001b[39m.\u001b[39mapply(\u001b[39mlambda\u001b[39;00m x:  data_tools\u001b[39m.\u001b[39mallesinklammernlöschen(x,\u001b[39m\"\u001b[39m\u001b[39m[\u001b[39m\u001b[39m\"\u001b[39m,\u001b[39m\"\u001b[39m\u001b[39m]\u001b[39m\u001b[39m\"\u001b[39m))\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/juliu/Google%20Drive/Infoprojekte/The_Geography_Game/checknotebook.ipynb#W1sZmlsZQ%3D%3D?line=15'>16</a>\u001b[0m df[\u001b[39m\"\u001b[39m\u001b[39m1\u001b[39m\u001b[39m\"\u001b[39m]\u001b[39m=\u001b[39mdf[\u001b[39m\"\u001b[39;49m\u001b[39m1\u001b[39;49m\u001b[39m\"\u001b[39;49m]\u001b[39m.\u001b[39;49mapply(\u001b[39mlambda\u001b[39;49;00m x:  data_tools\u001b[39m.\u001b[39;49muse_coordinates(x))\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/juliu/Google%20Drive/Infoprojekte/The_Geography_Game/checknotebook.ipynb#W1sZmlsZQ%3D%3D?line=16'>17</a>\u001b[0m \u001b[39m# df=df[df[\"1\"]!=0.0]\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/juliu/Google%20Drive/Infoprojekte/The_Geography_Game/checknotebook.ipynb#W1sZmlsZQ%3D%3D?line=17'>18</a>\u001b[0m \n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/juliu/Google%20Drive/Infoprojekte/The_Geography_Game/checknotebook.ipynb#W1sZmlsZQ%3D%3D?line=18'>19</a>\u001b[0m \n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/juliu/Google%20Drive/Infoprojekte/The_Geography_Game/checknotebook.ipynb#W1sZmlsZQ%3D%3D?line=30'>31</a>\u001b[0m \u001b[39m#     if country not in alternative_names.countries_for_language_en:\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/juliu/Google%20Drive/Infoprojekte/The_Geography_Game/checknotebook.ipynb#W1sZmlsZQ%3D%3D?line=31'>32</a>\u001b[0m \u001b[39m#         print(country)\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/juliu/Google%20Drive/Infoprojekte/The_Geography_Game/checknotebook.ipynb#W1sZmlsZQ%3D%3D?line=32'>33</a>\u001b[0m df\u001b[39m.\u001b[39mto_csv(\u001b[39m\"\u001b[39m\u001b[39me.csv\u001b[39m\u001b[39m\"\u001b[39m,index\u001b[39m=\u001b[39m\u001b[39mFalse\u001b[39;00m)\n",
-      "File \u001b[1;32mc:\\Users\\juliu\\anaconda3\\envs\\geogame_new\\lib\\site-packages\\pandas\\core\\series.py:4357\u001b[0m, in \u001b[0;36mSeries.apply\u001b[1;34m(self, func, convert_dtype, args, **kwargs)\u001b[0m\n\u001b[0;32m   4247\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mapply\u001b[39m(\n\u001b[0;32m   4248\u001b[0m     \u001b[39mself\u001b[39m,\n\u001b[0;32m   4249\u001b[0m     func: AggFuncType,\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m   4252\u001b[0m     \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs,\n\u001b[0;32m   4253\u001b[0m ) \u001b[39m-\u001b[39m\u001b[39m>\u001b[39m FrameOrSeriesUnion:\n\u001b[0;32m   4254\u001b[0m     \u001b[39m\"\"\"\u001b[39;00m\n\u001b[0;32m   4255\u001b[0m \u001b[39m    Invoke function on values of Series.\u001b[39;00m\n\u001b[0;32m   4256\u001b[0m \n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m   4355\u001b[0m \u001b[39m    dtype: float64\u001b[39;00m\n\u001b[0;32m   4356\u001b[0m \u001b[39m    \"\"\"\u001b[39;00m\n\u001b[1;32m-> 4357\u001b[0m     \u001b[39mreturn\u001b[39;00m SeriesApply(\u001b[39mself\u001b[39;49m, func, convert_dtype, args, kwargs)\u001b[39m.\u001b[39;49mapply()\n",
-      "File \u001b[1;32mc:\\Users\\juliu\\anaconda3\\envs\\geogame_new\\lib\\site-packages\\pandas\\core\\apply.py:1043\u001b[0m, in \u001b[0;36mSeriesApply.apply\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m   1039\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39misinstance\u001b[39m(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mf, \u001b[39mstr\u001b[39m):\n\u001b[0;32m   1040\u001b[0m     \u001b[39m# if we are a string, try to dispatch\u001b[39;00m\n\u001b[0;32m   1041\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mapply_str()\n\u001b[1;32m-> 1043\u001b[0m \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mapply_standard()\n",
-      "File \u001b[1;32mc:\\Users\\juliu\\anaconda3\\envs\\geogame_new\\lib\\site-packages\\pandas\\core\\apply.py:1098\u001b[0m, in \u001b[0;36mSeriesApply.apply_standard\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m   1092\u001b[0m         values \u001b[39m=\u001b[39m obj\u001b[39m.\u001b[39mastype(\u001b[39mobject\u001b[39m)\u001b[39m.\u001b[39m_values\n\u001b[0;32m   1093\u001b[0m         \u001b[39m# error: Argument 2 to \"map_infer\" has incompatible type\u001b[39;00m\n\u001b[0;32m   1094\u001b[0m         \u001b[39m# \"Union[Callable[..., Any], str, List[Union[Callable[..., Any], str]],\u001b[39;00m\n\u001b[0;32m   1095\u001b[0m         \u001b[39m# Dict[Hashable, Union[Union[Callable[..., Any], str],\u001b[39;00m\n\u001b[0;32m   1096\u001b[0m         \u001b[39m# List[Union[Callable[..., Any], str]]]]]\"; expected\u001b[39;00m\n\u001b[0;32m   1097\u001b[0m         \u001b[39m# \"Callable[[Any], Any]\"\u001b[39;00m\n\u001b[1;32m-> 1098\u001b[0m         mapped \u001b[39m=\u001b[39m lib\u001b[39m.\u001b[39;49mmap_infer(\n\u001b[0;32m   1099\u001b[0m             values,\n\u001b[0;32m   1100\u001b[0m             f,  \u001b[39m# type: ignore[arg-type]\u001b[39;49;00m\n\u001b[0;32m   1101\u001b[0m             convert\u001b[39m=\u001b[39;49m\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mconvert_dtype,\n\u001b[0;32m   1102\u001b[0m         )\n\u001b[0;32m   1104\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mlen\u001b[39m(mapped) \u001b[39mand\u001b[39;00m \u001b[39misinstance\u001b[39m(mapped[\u001b[39m0\u001b[39m], ABCSeries):\n\u001b[0;32m   1105\u001b[0m     \u001b[39m# GH 25959 use pd.array instead of tolist\u001b[39;00m\n\u001b[0;32m   1106\u001b[0m     \u001b[39m# so extension arrays can be used\u001b[39;00m\n\u001b[0;32m   1107\u001b[0m     \u001b[39mreturn\u001b[39;00m obj\u001b[39m.\u001b[39m_constructor_expanddim(pd_array(mapped), index\u001b[39m=\u001b[39mobj\u001b[39m.\u001b[39mindex)\n",
-      "File \u001b[1;32mc:\\Users\\juliu\\anaconda3\\envs\\geogame_new\\lib\\site-packages\\pandas\\_libs\\lib.pyx:2859\u001b[0m, in \u001b[0;36mpandas._libs.lib.map_infer\u001b[1;34m()\u001b[0m\n",
-      "\u001b[1;32mc:\\Users\\juliu\\Google Drive\\Infoprojekte\\The_Geography_Game\\checknotebook.ipynb Cell 2\u001b[0m in \u001b[0;36m<lambda>\u001b[1;34m(x)\u001b[0m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/juliu/Google%20Drive/Infoprojekte/The_Geography_Game/checknotebook.ipynb#W1sZmlsZQ%3D%3D?line=13'>14</a>\u001b[0m df[\u001b[39m\"\u001b[39m\u001b[39m1\u001b[39m\u001b[39m\"\u001b[39m]\u001b[39m=\u001b[39mdf[\u001b[39m\"\u001b[39m\u001b[39m1\u001b[39m\u001b[39m\"\u001b[39m]\u001b[39m.\u001b[39mapply(\u001b[39mlambda\u001b[39;00m x:  data_tools\u001b[39m.\u001b[39mallesinklammernlöschen(x,\u001b[39m\"\u001b[39m\u001b[39m(\u001b[39m\u001b[39m\"\u001b[39m,\u001b[39m\"\u001b[39m\u001b[39m)\u001b[39m\u001b[39m\"\u001b[39m))\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/juliu/Google%20Drive/Infoprojekte/The_Geography_Game/checknotebook.ipynb#W1sZmlsZQ%3D%3D?line=14'>15</a>\u001b[0m df[\u001b[39m\"\u001b[39m\u001b[39m1\u001b[39m\u001b[39m\"\u001b[39m]\u001b[39m=\u001b[39mdf[\u001b[39m\"\u001b[39m\u001b[39m1\u001b[39m\u001b[39m\"\u001b[39m]\u001b[39m.\u001b[39mapply(\u001b[39mlambda\u001b[39;00m x:  data_tools\u001b[39m.\u001b[39mallesinklammernlöschen(x,\u001b[39m\"\u001b[39m\u001b[39m[\u001b[39m\u001b[39m\"\u001b[39m,\u001b[39m\"\u001b[39m\u001b[39m]\u001b[39m\u001b[39m\"\u001b[39m))\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/juliu/Google%20Drive/Infoprojekte/The_Geography_Game/checknotebook.ipynb#W1sZmlsZQ%3D%3D?line=15'>16</a>\u001b[0m df[\u001b[39m\"\u001b[39m\u001b[39m1\u001b[39m\u001b[39m\"\u001b[39m]\u001b[39m=\u001b[39mdf[\u001b[39m\"\u001b[39m\u001b[39m1\u001b[39m\u001b[39m\"\u001b[39m]\u001b[39m.\u001b[39mapply(\u001b[39mlambda\u001b[39;00m x:  data_tools\u001b[39m.\u001b[39;49muse_coordinates(x))\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/juliu/Google%20Drive/Infoprojekte/The_Geography_Game/checknotebook.ipynb#W1sZmlsZQ%3D%3D?line=16'>17</a>\u001b[0m \u001b[39m# df=df[df[\"1\"]!=0.0]\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/juliu/Google%20Drive/Infoprojekte/The_Geography_Game/checknotebook.ipynb#W1sZmlsZQ%3D%3D?line=17'>18</a>\u001b[0m \n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/juliu/Google%20Drive/Infoprojekte/The_Geography_Game/checknotebook.ipynb#W1sZmlsZQ%3D%3D?line=18'>19</a>\u001b[0m \n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/juliu/Google%20Drive/Infoprojekte/The_Geography_Game/checknotebook.ipynb#W1sZmlsZQ%3D%3D?line=30'>31</a>\u001b[0m \u001b[39m#     if country not in alternative_names.countries_for_language_en:\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/juliu/Google%20Drive/Infoprojekte/The_Geography_Game/checknotebook.ipynb#W1sZmlsZQ%3D%3D?line=31'>32</a>\u001b[0m \u001b[39m#         print(country)\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/juliu/Google%20Drive/Infoprojekte/The_Geography_Game/checknotebook.ipynb#W1sZmlsZQ%3D%3D?line=32'>33</a>\u001b[0m df\u001b[39m.\u001b[39mto_csv(\u001b[39m\"\u001b[39m\u001b[39me.csv\u001b[39m\u001b[39m\"\u001b[39m,index\u001b[39m=\u001b[39m\u001b[39mFalse\u001b[39;00m)\n",
-      "File \u001b[1;32mc:\\Users\\juliu\\Google Drive\\Infoprojekte\\The_Geography_Game\\data_tools.py:130\u001b[0m, in \u001b[0;36muse_coordinates\u001b[1;34m(string)\u001b[0m\n\u001b[0;32m    128\u001b[0m string2\u001b[39m=\u001b[39mstring\n\u001b[0;32m    129\u001b[0m k\u001b[39m=\u001b[39m\u001b[39m1\u001b[39m\n\u001b[1;32m--> 130\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39m\"\u001b[39;49m\u001b[39mS\u001b[39;49m\u001b[39m\"\u001b[39;49m \u001b[39min\u001b[39;49;00m string:\n\u001b[0;32m    131\u001b[0m     k\u001b[39m=\u001b[39m\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m\n\u001b[0;32m    132\u001b[0m string\u001b[39m=\u001b[39mstring\u001b[39m.\u001b[39mreplace(\u001b[39m\"\u001b[39m\u001b[39m°\u001b[39m\u001b[39m\"\u001b[39m,\u001b[39m\"\u001b[39m\u001b[39m.\u001b[39m\u001b[39m\"\u001b[39m)\n",
-      "\u001b[1;31mTypeError\u001b[0m: argument of type 'float' is not iterable"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import alternative_names\n",
     "import data_tools\n",
     "\n",
     "\n",
-    "df=pd.read_csv(\"rawdata/southernmost_point.csv\")\n",
+    "df=pd.read_csv(\"rawdata/Health_expenditure.csv\")\n",
+    "\n",
+    "df[\"0\"]=df[\"0\"].apply(lambda x:  x.replace(\"*\",\"\"))\n",
     "df[\"0\"]=df[\"0\"].apply(lambda x: data_tools.try_lstrip(x))\n",
     "\n",
     "df[\"0\"]=df[\"0\"].apply(lambda x:  data_tools.try_rstrip(x))\n",
     "# df[\"2\"]=df[\"1\"].apply(lambda x:  data_tools.replace_credit_rating(x))\n",
     "\n",
     "# df[\"1\"]=df[\"1\"].apply(lambda x:  str(x))\n",
-    "# df[\"1\"]=df[\"1\"].apply(lambda x:  x.replace(\",\",\"\"))\n",
+    "df[\"1\"]=df[\"1\"].apply(lambda x:  x.replace(\",\",\"\"))\n",
     "df[\"1\"]=df[\"1\"].apply(lambda x:  data_tools.allesinklammernlöschen(x,\"(\",\")\"))\n",
     "df[\"1\"]=df[\"1\"].apply(lambda x:  data_tools.allesinklammernlöschen(x,\"[\",\"]\"))\n",
-    "df[\"1\"]=df[\"1\"].apply(lambda x:  data_tools.use_coordinates(x))\n",
+    "# df[\"1\"]=df[\"1\"].apply(lambda x:  data_tools.use_coordinates(x))\n",
     "# df=df[df[\"1\"]!=0.0]\n",
     "\n",
     "\n",
